--- a/index.html
+++ b/index.html
@@ -22,53 +22,44 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="#">Me</a>
+                <a class="navbar-brand" href="#">Milena</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right">
-                    <li><a href="#">WHO</a></li>
-                    <li><a href="#">WHAT</a></li>
-                    <li><a href="#">WHERE</a></li>
+                    <li><a href="#Who">WHO</a></li>
+                    <li><a href="#Portfolio">PORTFOLIO</a></li>
+                    <li><a href="#Contact">CONTACT</a></li>
                 </ul>
             </div>
         </div>
     </nav>
-    <!-- First Container -->
-    <div class="container-fluid bg-1 text-center">
+    <div class="container-fluid bg-1 text-center" id="Who">
         <h3 class="margin">Who Am I?</h3>
         <img src="IMG/tabash1234.png" class="img-responsive img-circle margin" style="display:inline" alt="Milena" width="350" height="350">
-        <h3>I'm an adventurer</h3>
+        <h3>I'm a web developer</h3>
+        <h5><br/> Proficient in using Web Development languages such as HTML, CSS, JavaScript</h5>
     </div>
-    <!-- Second Container -->
-    <div class="container-fluid bg-2 text-center">
-        <h3 class="margin">What Am I?</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
-        <a href="#" class="btn btn-default btn-lg">
-    <span class="glyphicon glyphicon-search"></span> Search
-  </a>
-    </div>
-    <!-- Third Container (Grid) -->
-    <div class="container-fluid bg-3 text-center">
-        <h3 class="margin">Where To Find Me?</h3>
+    <div class="container-fluid bg-2 text-center" id="Portfolio">
+        <h3 class="margin">Portfolio</h3>
         <br>
         <div class="row">
-            <div class="col-sm-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="birds1.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-            </div>
-            <div class="col-sm-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="birds2.jpg" class="img-responsive margin" style="width:100%" alt="Image">
-            </div>
-            <div class="col-sm-4">
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-                <img src="birds3.jpg" class="img-responsive margin" style="width:100%" alt="Image">
+            <div class="col-md-2 col-md-offset-5">
+                <p>Stylish Pomodoro Timer</p>
+                <a itemprop="url" href="https://tabash1234.github.io/pomodorist/" target="_blank">
+                <img src="img/pomodorist.png" class="img-responsive margin" style="width:100%" alt="Pmodoro timer">
             </div>
         </div>
     </div>
-    <footer class="container-fluid bg-4 text-center">
-        <p>© 2017 Milena Tabasevic <a href="https://github.com/tabash1234">github.com/tabash1234</a></p>
-    </footer>
+    <div class="container-fluid bg-3 text-center">
+        <h3 class="margin" id="Contact">Contact</h3>
+        <br>
+        <div class="row">
+            <a href="mailto:milenatabasevic@gmail.com" id="mail">milenatabasevic@gmail.com</a>
+            </div>
+        </div>
+        <footer class="container-fluid bg-4 text-center">
+            <p>© 2017 Milena Tabasevic <a href="https://github.com/tabash1234">github.com/tabash1234</a></p>
+        </footer>
 </body>
 
 </html>
