--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
         <div class="row">
             <div class="col-md-2 col-md-offset-5">
                 <p>Stylish Pomodoro Timer</p>
-                <a itemprop="url" href="https://tabash1234.github.io/pomodorist/" target="_blank">
-                <img src="img/pomodorist.png" class="img-responsive margin" style="width:100%" alt="Pmodoro timer">
+                <a itemprop="url" href="https://tabash1234.github.io/pomodorist/" target="_blank"> 
+                <img src="img/pomodorist.png" class="img-responsive margin" style="width:100%" alt="Pomodoro timer"> </a>
             </div>
         </div>
     </div>
@@ -55,11 +55,11 @@
         <br>
         <div class="row">
             <a href="mailto:milenatabasevic@gmail.com" id="mail">milenatabasevic@gmail.com</a>
-            </div>
         </div>
-        <footer class="container-fluid bg-4 text-center">
-            <p>© 2017 Milena Tabasevic <a href="https://github.com/tabash1234">github.com/tabash1234</a></p>
-        </footer>
+    </div>
+    <footer class="container-fluid bg-4 text-center">
+        <p>© 2017 Milena Tabasevic <a href="https://github.com/tabash1234">github.com/tabash1234</a></p>
+    </footer>
 </body>
 
 </html>
