--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
             <div class="col-md-2 col-md-offset-5">
                 <p>Stylish Pomodoro Timer</p>
                 <a itemprop="url" href="https://tabash1234.github.io/pomodorist/" target="_blank"> 
-                <img src="img/pomodorist.png" class="img-responsive margin" style="width:100%" alt="Pomodoro timer"> </a>
+                <img src="img/pomodorist_image.jpg" class="img-responsive margin" style="width:100%" alt="Pomodoro timer"> </a>
             </div>
         </div>
     </div>
