--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     </nav>
     <div class="container-fluid bg-1 text-center" id="Who">
         <h3 class="margin">Who Am I?</h3>
-        <img src="IMG/tabash1234.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Milena" width="350" height="350">
+        <img src="img/tabash1234.jpg" class="img-responsive img-circle margin" style="display:inline" alt="Milena" width="350" height="350">
         <h3>I'm a web developer</h3>
         <h5><br/> Proficient in using Web Development languages such as HTML, CSS, JavaScript</h5>
     </div>
